# order-management

./: .gitignore  LICENSE  README.md  pyproject.toml
src/: __init__.py
src/api/: __init__.py  routes.py
src/domain/: __init__.py  models.py  order_book.py
src/services/: order_manager.py  price_calculator.py  trade_executor.py
tests/: __init__.py  test_api.py  test_properties.py
